fix: hide overflowed image in avatar and change font-weight in AddContact modal text

--- a/src/components/AddContactModal/AddContactModal.css
+++ b/src/components/AddContactModal/AddContactModal.css
@@ -66,7 +66,6 @@
   padding: 0 90px;
   letter-spacing: -0.3px;
   font-size: 18px;
-  font-weight: 500;
   line-height: 1.3;
   color: #000;
 }
