--- a/src/components/Avatar/Avatar.css
+++ b/src/components/Avatar/Avatar.css
@@ -53,6 +53,7 @@
   justify-content: center;
   align-items: center;
   color: #fff;
+  overflow: hidden;
 }
 
 .clickable {
